# dino-diffusion

./: .gitignore  preprocess.py  pyproject.toml  train.py
dino_diff/models/: denoiser.py  dino_sampling.py  ella_perceiver.py  text_embedder.py  text_perceiver.py
